test/sema/typeck/generic/ctor-without-type-params.out
error: cannot infer type arguments: [_, _].
--> ctor-without-type-params.dora:2:13
 | class Foo[A, B]
 | fn test() { Foo(); }
               ~~~~~
 | 
1 error found.
