test/sema/typeck/generic/ctor-without-type-params.dora
class Foo[A, B]
fn test() { Foo(); }
